full adaptation for max-width 767px, fix z-index for menu and subheader

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -32,6 +32,7 @@ h2
 
 .subheader
     position: absolute
+    z-index: 0
     width: 100%
     height: 84px
     background-color: rgba(0, 0, 0, 0.6)
@@ -186,7 +187,7 @@ h2
 .mobile
     min-height: 864px
     padding: 48px 0 79px 0
-    background: url('../img/mobile/bg.jpg') center (center / cover) no-repeat
+    background: url('../img/mobile/bg_mobile.jpg') center (center / auto) repeat
     .row
         margin-top: 32px
     &_item
@@ -329,7 +330,7 @@ footer
     min-height: 156px
     padding: 14px 18px 39px 14px
     .lang
-        margin-top: 19px
+        // margin-top: 19px
         display: block
         font-size: 11px
         line-height: 11px
