--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -92,6 +92,7 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        z-index: 1
         top: 0
         left: -100%
         width: 50%
@@ -153,6 +154,51 @@
     .promo
         &_header
             line-height: 45px
+    .advant
+        padding: 30px 0 50px 0
+        &_item
+            width: 100%
+    .mobile
+        padding: 30px 0 50px 0
+    .car
+        min-height: 635px
+        padding: 30px 0 50px 0
+        background-image: none
+        &_descr
+            color: #ffffff
+    .require
+        padding: 30px 0 50px 0
+        &_block
+            margin: 20px 0
+        &_title
+            font-size: 18px
+        &_list
+            margin-top: 16px
+            li
+                font-size: 16px
+        &_descr
+            font-size: 16px
+    .map
+        padding: 30px 0 50px 0
+    footer
+        .footer
+            &_links
+                width: 320px
+                &_main
+                    justify-content: space-between
+                    font-size: 14px
+                &_sub
+                    justify-content: space-around
+        .lang
+            margin-top: 19px
+
+    .title
+        font-size: 28px
+        line-height: 32px
+        margin-top: 22px
+    .subtitle
+        margin-top: 15px
+
 
 @media (max-width: 575px)
     nav
@@ -206,7 +252,7 @@
             width: 100px
             height: 100px
         &_item
-            width: 100%
+            // width: 100%
             margin-top: 25px
         &_title
             font-size: 16px
